# recursive-lm

./: .gitignore  README.md  banner.txt  pyproject.toml
evals/: core_eval.py
recursive-lm/: tokenizer.py
recursive_lm/: block.py  common.py  dataloader.py  hf_wrapper.py  inference.py  model.py  optimizer.py  tokenizer.py  training.py
recursive_lm/huggingface/: __init__.py  hf_processor.py  hf_tokenizer.py  hf_wrapper.py
scattermoe/: mlp.py  parallel_experts.py
scattermoe/kernels/: ops.py
scripts/: convert_hf.py  download_bblm.py  prompt_model.py  promt_model.py  run_core_eval.py  sample_climbmix.py  subdivide_dataset.py  tokenize_data.py  train_model.py  train_tokenizer.py  weight_analysis.py
tokenizers/: bb24_tokenizer.pkl  climbmix100Mwords_tokenizer.pkl
