[project]
name = "recursive-lm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "datasets>=4.4.1",
    "maturin>=1.10.2",
    "pyarrow>=22.0.0",
    "tiktoken>=0.12.0",
    "torch==2.10.0.dev20251213+cu130",
    "wandb>=0.23.1",
]

[dependency-groups]
analysis = [
  "matplotlib",
]
hf = [
  "transformers",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "rustbpe"
bindings = "pyo3"
python-source = "."
manifest-path = "rustbpe/Cargo.toml"

[tool.uv.sources]
torch = { index = "pytorch-nightly" }

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/"
explicit = true
